--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/@themesberg/flowbite@1.1.0/dist/flowbite.min.css"
+        />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
